[project]
name = "pandemic-game-ml"
version = "0.1.0"
description = "A project to train an AI agent to play the game Pandemic"
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
