[project]
name = "pandemic-game-ml"
version = "0.1.0"
description = "A project to train an AI agent to play the game Pandemic"
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
packages = "pandemic_game_ml"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "src"
strict = false
check_untyped_defs = true
warn_return_any = true

# https://docs.pytest.org/en/7.1.x/reference/reference.html#ini-options-ref
[tool.pytest.ini_options]
pythonpath = "src"