[metadata]
name = my-python-cli
version = 0.1.0
description = A command-line interface for my Python project
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/my-python-cli

[options]
packages = find:
install_requires =
    click

[options.extras_require]
testing =
    pytest
    flake8
    mypy

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[mypy]
files = src/my_python_cli
ignore_missing_imports = True